fix some of the typesetting in Ch 1

--- a/main.tex
+++ b/main.tex
@@ -60,6 +60,7 @@
 \todo[inline]{Unify index entries.}
 \todo[inline]{Make backreferences use cleveref.}
 \todo[inline]{Get rid of the Appendix heading over the Bibliography.}
+\todo[inline]{It's deliberate that the footnotes are not fully justified?}
 
 
 
