--- a/mo.tex
+++ b/mo.tex
@@ -38,7 +38,7 @@ Let $\xi$ be the tautological $S^0$--bundle over the unpointed space $\RP^\infty
 
 Now we catalog a bunch of useful properties of the Thom space functor.  Firstly, recall that a spherical bundle over $X$ is the same data~\cite{MayClassifyingSpaces} as a map $X \to B \GL_1 S^{n-1}$, where \index{classifying space of spherical bundles}$\GL_1 S^{n-1}$ is the subspace of $F(S^{n-1}, S^{n-1})$ expressed by the pullback of spaces
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1.1em]
 \GL_1 S^{n-1} \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow{d} \\
 h\CatOf{Spaces}(S^{n-1}, S^{n-1})^{\times} \arrow{r} & h\CatOf{Spaces}(S^{n-1}, S^{n-1}) \arrow[equal]{r} & \pi_0 \CatOf{Spaces}(S^{n-1}, S^{n-1}).
 \end{tikzcd}
@@ -61,7 +61,7 @@ The block--sum maps $O(n) \times O(m) \to O(n+m)$ are compatible with the join m
 \end{lemma}
 \noindent Again taking a cue from $K$--theory, we take the colimit as $n$ grows large, using the maps
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[column sep=1.5em]
 B\GL_1 S^{n-1} \arrow[equal]{r} \arrow{d} & B\GL_1 S^{n-1} \times * \arrow["\operatorname{id} \times \text{triv}"]{r} \arrow{d} & B\GL_1 S^{n-1} \times B\GL_1 S^0 \arrow["\ast"]{r} \arrow{d} & B\GL_1 S^n, \arrow{d} \\
 BO(n) \arrow[equal]{r} & BO(n) \times * \arrow["\operatorname{id} \times \text{triv}"]{r} & BO(n) \times BO(1) \arrow["\oplus"]{r} & BO(n+1).
 \end{tikzcd}
@@ -249,7 +249,7 @@ This example showcases the complications that algebraic geometry introduces to t
 \end{align*}
 This group scheme has several interesting properties, which we will merely state for now, reserving their proofs for \Cref{WorkedAlpha2Example}.
 \begin{enumerate}
-\item $\alpha_2$ has the same underlying structure ring as $\mu_2 := \mathbb{G}_m[2]$, the $2$--torsion points of $\mathbb G_m$, but is not isomorphic to it.  (For instance, $\InternalHom{GroupSchemes}(\mu_2, \mu_2)$ gives the constant group scheme $\underline{\Z/2}$, but $\InternalHom{GroupSchemes}(\alpha_2, \mu_2) = \alpha_2$.)
+\item $\alpha_2$ has the same underlying structure ring as $\mu_2 := \mathbb{G}_m[2]$, the $2$--torsion points of $\mathbb G_m$, but is not isomorphic to it.
 \item There is no commutative group scheme $G$ of rank four such that $\alpha_2 = G[2]$.
 \item If $E/\mathbb{F}_2$ is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence does not split (even after base change).
 \item The subgroups of $\alpha_2 \times \alpha_2$ of order $2$ are parameterized by the scheme $\mathbb{P}^1$, i.e., for $R$ an $\F_2$-algebra the subgroup schemes of $\alpha_2 \times \alpha_2$ of order two \emph{which are defined over $R$} are parameterized by the set $\mathbb{P}^1(R)$.
@@ -381,15 +381,15 @@ Projecting to the quotient Hopf algebra $\mathcal AP_0 \to \F_2[\xi_0^\pm]$ give
 \begin{proof}[Calculation]
 Starting with an auxiliary cohomology class $x \in \HFtwo^n(X)$, we produce a homogenized cohomology class $x \cdot u^n \in \HFtwo P^0(X)$.  Under the coaction map, this is sent to
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=0.2em]
 \HFtwo P^0(X) \arrow["\alpha^*"]{r} & \HFtwo P^0(X) \otimes \mathcal AP_0 \arrow{r} & \HFtwo P^0(X) \otimes \F_2[\xi_0^\pm] \\
 x \cdot u^n \arrow[|->]{rr} & & x \cdot u^n \otimes \xi_0^n.
 \end{tikzcd}
 \end{center}
-Applying \Cref{GradedAndGmEquivAgree} to this coaction thus selects the original degree $n$ classes.
+Applying \Cref{GradedAndGmEquivAgree} thus selects the original degree $n$ classes.
 \end{proof}
 
-Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} \[\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2).\]
+Early on in this discussion, trading the language ``graded map'' for ``$\Gm$--equivariant map'' did not seem to have much of an effect on our mathematics.  The thrust of this Lemma is that ``Steenrod--equivariant map'' already includes ``$\Gm$--equivariant map'', which is a visible gain in brevity.  To study the rest of the content of Steenrod equivariance algebro--geometrically, we need only identify what the series $\lambda^*(x)$ embodies.  Note that this necessarily involves some creativity, and the only justification we can supply will be moral, borne out over time, as our narrative encompasses more and more phenomena.  With that caveat in mind, here is one such description.  Recall the map induced by the $H$--space multiplication \[\HFtwo P^0 \RP^\infty \otimes \HFtwo P^0 \RP^\infty \leftarrow \HFtwo P^0 \RP^\infty.\]  Since this map comes from a map of spaces, it is equivariant for the Steenrod coaction, and since the action on the left is furthermore diagonal, we deduce the formula\index{formal group!additive homomorphism} $lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.
 
 \begin{lemma}\label{SteenrodAlgIdentifiedWithAutGa}
 The series $\lambda^*(x) = \sum_{j=0}^\infty x^{2^j} \otimes \xi_j$ is the universal example of a series satisfying $\lambda^*(x_1 + x_2) = \lambda^*(x_1) + \lambda^*(x_2)$.  The set $(\Spec \mathcal AP_0)(T)$ is identified with the set of power series $f$ with coefficients in the $\F_2$--algebra $T$ satisfying \[f(x_1 + x_2) = f(x_1) + f(x_2).\]
@@ -414,7 +414,7 @@ As group schemes, we have thus calculated \[\RP^\infty_{\HFtwo P} \cong \G_a.\]
 \end{example}
 
 \begin{example}\label{FirstAppearanceOfInternalAut}
-Given the appearance of a homomorphism condition in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{mapping object}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a proper name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
+Noting the homomorphism condition appeaing in \Cref{SteenrodAlgIdentifiedWithAutGa}, we would like to connect $\Spec \mathcal AP_0$ with $\G_a$ more directly.  Toward this, we define a \index{mapping object}``hom functor''\footnote{We are careful to say ``functor'' here because it is \emph{not} generally another scheme.} for two formal schemes: \[\InternalHom{FormalSchemes}(X, Y)(T) = \left\{ (u, f) \middle| \begin{array}{c} u: \Spec T \to \Spec \F_2, \\ f: u^* X \to u^* Y \end{array}\right\}.\]  Restricting attention to homomorphisms, we see that a proper name for $\Spec \mathcal AP_0$ is \[\Spec \mathcal AP_0 \cong \InternalAut \G_a.\]  To check this, consider a point $g \in (\Spec \mathcal AP_0)(T)$ for an $\F_2$--algebra $T$.  The $\F_2$--algebra structure of $T$ (which is uniquely determined by a property of $T$) gives rise to a map $u\co \Spec T \to \Spec \F_2$.  The rest of the data of $g$ gives rise to a power series in $T\ps{x}$ as in the proof of \Cref{SteenrodAlgIdentifiedWithAutGa}, which can be re-interpreted as an automorphism $g\co u^* \G_a \to u^* \G_a$ of formal group schemes.\footnote{This description, too, is sensitive to the difference between $\G_a$ and $\mathbb G_a$.  The scheme $\InternalEnd \mathbb G_a$ is populated by \emph{polynomials} satisfying a homomorphism condition, and essentially none of them have inverses.}
 \end{example}
 
 \begin{remark}\label{AutGaHasStableCoopns}
@@ -444,13 +444,13 @@ In summary, the formula $\RP^\infty_{\HFtwo P} \cong \G_a$ is meant to point out
 
 
 
-\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
+\vspace{-2\baselineskip}\section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
 In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  But, even without a construction, it is instructive to see how this comes about from a moral perspective.
 
 \begin{remark}
 \todo{This belongs somewhere else.}
-Throughout this Lecture, we will work with graded homology groups, rather than with periodified cohomology as was the case in \Cref{TheSteenrodAlgebraSection}.  This choice will remain mysterious for now, but we can at least reassure ourselves that it carries the same data as we were studying previously.  Referring to our discussion of the construction of the coaction map, we see that without taking Spanier--Whitehead duals we already have an analogous coaction map on homology: \[H\F_{2*} X \to H\F_{2*} X \otimes \mathcal A_*.\]  Additionally, building on the discussion in \Cref{AutGaHasStableCoopns}, the splitting of the Hopf algebra shows that we are free to work gradedly or work with the periodified version of mod--$2$ homology, while still retaining the rest of the framework.
+Throughout this Lecture, we will work with graded homology groups, rather than with periodified cohomology as was the case in \Cref{TheSteenrodAlgebraSection}.  This choice will remain mysterious for now, but we can at least reassure ourselves that it carries the same data as we were studying previously.  Referring to our discussion of the construction of the coaction map, we see that without taking Spanier--Whitehead duals we already have an analogous coaction map on homology: $H\F_{2*} X \to H\F_{2*} X \otimes \mathcal A_*$.  Additionally, building on the discussion in \Cref{AutGaHasStableCoopns}, the splitting of the Hopf algebra shows that we are free to work gradedly or work with the periodified version of mod--$2$ homology, while still retaining the rest of the framework.
 \end{remark}
 
 With this caveat out of the way, begin by considering the following three self-maps of the stable sphere:
@@ -467,7 +467,7 @@ With this caveat out of the way, begin by considering the following three self-m
 \end{center}
 We see that mod--$2$ homology can immediately distinguish between the null map and the identity map just by its behavior on morphisms, but it cannot distinguish between the null map and the multiplication-by-$2$ map.  To try to distinguish between these two, we use the only other tool available to us: homology theories send cofiber sequences to long exact sequences, and moreover the data of a map $f$ and the data of the inclusion map $\S^0 \to C(f)$ into its cone are equivalent in the stable category.  So, we trade our maps $0$ and $2$ for the following cofiber sequences:
 \begin{center}
-\begin{tikzcd}[column sep=1.0em, ampersand replacement=\&]
+\begin{tikzcd}[column sep=0.55em, ampersand replacement=\&]
 \& \S^0 \arrow{r} \& C(0) \arrow{r} \& \S^1, \&
 \S^0 \arrow{r} \& C(2) \arrow{r} \& \S^1.
 \intertext[12pt]{The homology groups of these spectra $C(0)$ and $C(2)$ are more complicated than just that of $\S^0$, and we will draw them according to the following conventions: each ``$\bullet$'' in the row labelled ``$[j]$'' indicates an $\F_2$--summand in the $j${\th} $\HFtwo$--homology of the spectrum.  Applying homology to these cofiber sequences and drawing the results, these again appear to be identical:}
@@ -502,7 +502,7 @@ We could now work through the construction of the Adams spectral sequence, but i
 The $0$--line of the Adams spectral sequence consists of exactly those elements visible to the \index{Hurewicz homomorphism}Hurewicz homomorphism. \qed
 \end{lemma}
 
-For the rest of the section, we will focus on the algebraic input ``$\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X)$'', which will require us to grapple with the homological algebra of \index{comodule}comodules for a Hopf algebra.  To start that discussion, it's both reassuring and instructive to see that homological algebra can, in fact, even be done with comodules.  In the usual development of homological algebra for \emph{modules}, the key observations are the existence of projective and injective modules, and there is something at work similar here.
+For the rest of the section, we will focus on an interpretation of the algebraic input ``$\Ext_{\mathcal A_*}^{*, *}(\F_2, H\F_{2*} X)$'', which will require us to grapple with the homological algebra of \index{comodule}comodules for a Hopf algebra.  To start that discussion, it's both reassuring and instructive to see that homological algebra can, in fact, even be done with comodules.  In the usual development of homological algebra for \emph{modules}, the key observations are the existence of projective and injective modules, and there is something at work similar here.
 
 \begin{remark}[{\cite[Appendix A1]{RavenelGreenBook}}]
 Much of the results below do not rely on working with a Hopf algebra over the field $k = \F_2$.  In fact, $k$ can usually be taken to be a ring rather than a field. More generally, the theory goes through in the context of comodules over flat Hopf algebroids, cf.\ also \Cref{IdentifyingAdamsE2Page}.
@@ -524,14 +524,14 @@ In our case, $M$ itself is always $k$--injective, so there's already an injectiv
 
 Satisfied that ``$\Ext$'' at least makes sense, we're free to pursue more conceptual ends.  Recall from algebraic geometry that a module $M$ over a ring $R$ is equivalent data to \index{sheaf!quasicoherent}quasicoherent sheaf $\widetilde{M}$ over $\Spec R$.  We now give a definition of ``quasicoherent sheaf'' that fits with our functorial perspective:
 \begin{definition}[{\cite[Definition 1.1]{HoveyMoritaThy}, \cite[Definition 2.42]{StricklandFSFG}}]\label{DefnQCohSheaves}
-A presheaf (of modules) over a scheme $X$ is an assignment $\sheaf F\co X(T) \to \CatOf{Modules}_T$, satisfying a kind of functoriality in $T$: for each map $f\co T \to T'$, there is a compatible choice of natural transformation (between the \emph{not necessarily equal composites})
+An assignment $\sheaf F\co X(T) \to \CatOf{Modules}_T$ is said to be a \textit{presheaf (of modules) over $X$} when it satisfies lax functoriality in $T$: there is a natural transformation $\tau$ such that for each map $f\co T \to T'$, $\tau$ describes a map (between the \emph{not necessarily equal composites})
 \begin{center}
 \begin{tikzcd}[row sep=3em]
 X(T) \arrow["\sheaf F(T)"]{r} \arrow["X(f)"]{d} & \CatOf{Modules}_T \arrow["- \otimes_T T'"]{d} \arrow[Rightarrow, "\tau(f)" description]{ld} \\
 X(T') \arrow["\sheaf F(T')"]{r} & \CatOf{Modules}_{T'}.
 \end{tikzcd}
 \end{center}
-(We think of the image of a particular point $t\co \Spec T \to X$ in $\CatOf{Modules}_T$ as the module of ``sections over $t$''.)  Such a presheaf is said to be a \index{sheaf!quasicoherent}\textit{quasicoherent sheaf} when these natural transformations are all natural isomorphisms.
+We think of the image of a particular point $t\co \Spec T \to X$ in $\CatOf{Modules}_T$ as the module of ``sections over $t$''.  Such a presheaf is said to be a \index{sheaf!quasicoherent}\textit{quasicoherent sheaf} when these natural transformations are all natural isomorphisms.
 \end{definition}
 
 \begin{lemma}[{\cite[Proposition 2.47]{StricklandFSFG}}]\label{CorrespondenceQCohAndModules}
@@ -617,7 +617,7 @@ Picking $M = k$, we have
 \end{proof}
 
 \begin{example}\label{HF2HomologyIsValuedInAutGaEquivarModules}
-In \Cref{TheSteenrodAlgebraSection}, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$ of \index{formal group!strict isomorphism}strict automorphisms of $\G_a$, which is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  The punchline is that this is analogous to \Cref{HopfAlgebrasFromFiniteGroups} above: $\Cotor_{\mathcal A_*}(\F_2, \HFtwo_* X)$ is thought of as the \index{derived fixed points}``derived fixed points'' of ``$G = \InternalAut_1(\G_a)$'' on the ``$G$--module'' $\HFtwo_* X$.
+In \Cref{TheSteenrodAlgebraSection}, we identified $\mathcal A_*$ with the ring of functions on the group scheme $\InternalAut_1(\G_a)$ of \index{formal group!strict isomorphism}strict automorphisms of $\G_a$, which is defined by the kernel sequence \[0 \to \InternalAut_1(\G_a) \to \InternalAut(\G_a) \to \Gm \to 0.\]  The punchline is that this is analogous to \Cref{HopfAlgebrasFromFiniteGroups} above: the object $\Cotor_{\mathcal A_*}(\F_2, \HFtwo_* X)$ is thought of as the \index{derived fixed points}``derived fixed points'' of $\InternalAut_1(\G_a)$ acting on $\HFtwo_* X$.
 \end{example}
 
 We now give several examples to get a sense of how the Adams spectral sequence behaves.
@@ -687,7 +687,7 @@ Our first step toward this is the following calculation:
 The natural map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) \to \HFtwo P_0(BO).\] induces a map \[\Sym \widetilde{\HFtwo P}_0(BO(1)) = \frac{\Sym \HFtwo P_0(BO(1))}{\beta_0 = 0} \xrightarrow{\simeq} \HFtwo P_0(BO)\] which is an isomorphism of Hopf algebras and of comodules for the dual Steenrod algebra.
 \end{lemma}
 \begin{proof}
-This follows from a combination of standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring $\HFtwo P^0 BO(n)$~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Second, the total Stiefel--Whitney class $w(V) = \sum_j w_j(V) t^j$ is exponential~\cite[Theorem 16.3]{Switzer}, in the sense of \[w(V \oplus W) = w(V) \cdot w(W).\]  From this, it follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
+This follows from a combination of standard facts about \index{Stiefel--Whitney class}Stiefel--Whitney classes.  First, these classes generate the cohomology ring $\HFtwo P^0 BO(n)$~\cite[Theorem 16.10]{Switzer}: \[\HFtwo P^0 BO(n) \cong \F_2\ps{w_1, \ldots, w_n}.\]  Then, the total Stiefel--Whitney class $w(V) = \sum_j w_j(V) t^j$ is exponential~\cite[Theorem 16.3]{Switzer}, in the sense that \[w(V \oplus W) = w(V) \cdot w(W).\]  It follows that the natural map \[\HFtwo P^0 BO(n) \xrightarrow{\bigoplus_{j=1}^n \L_j} \HFtwo P^0 BO(1)^{\times n} \cong (\HFtwo P^0 BO(1))^{\otimes n}\] is the inclusion of the symmetric polynomials, by calculating the total Stiefel--Whitney class \[w\left( \bigoplus_{j=1}^n \L_j \right) = \prod_{j=1}^n (1 + w_1(\L_j)) = \sum_{j=0}^n \sigma_j(w_1(\L_1), \ldots, w_1(\L_n)) t^j.\]  Dually, the homological map \[(\HFtwo P_0 BO(1))^{\otimes n} \to \HFtwo P_0 BO(n)\] is surjective, modeling the quotient from the tensor product to the symmetric tensor product.  Stabilizing as $n \to \infty$, we recover the statement of the Lemma.
 \end{proof}
 
 With this in hand, we now turn to the homotopy ring $\HFtwo P_0 MO$.  There are two equivalences that we might consider employing.  We have the Thom isomorphism:
@@ -724,7 +724,7 @@ The following square commutes:
 \end{center}
 \end{lemma}
 \begin{proof}
-The top isomorphism asserts only that $\F_2$--cohomology and $\F_2$--homology are linearly dual to one another.  The second follows immediately from investigating the effect of the ring homomorphism diagrams in the bottom-right corner in terms of the subset they select in the top-left.
+The top isomorphism asserts that $\F_2$--cohomology and $\F_2$--homology are linearly dual to one another.  The second follows immediately from investigating the effect of the ring homomorphism diagrams in the bottom-right corner in terms of the subset they select in the top-left.
 \end{proof}
 
 \begin{corollary}\label{MOOrientationsVsRPClasses}
@@ -753,7 +753,7 @@ There is an $\InternalAut(\G_a)$--equivariant isomorphism of schemes \[\Spec \HF
 \begin{proof}
 The conclusion of the previous Corollary is that the $\F_2$--points of $\Spec \HFtwo P_0(MO)$ biject with classes $\HFtwo P^0 MO(1) \cong \widetilde{\HFtwo P}^0 \RP^\infty$ satisfying the condition that they give an isomorphism $\RP^\infty_{\HFtwo P} \cong \G_a$.  Because $\HFtwo P_0(MO)$ is a polynomial algebra, this holds in general: for $u\co \F_2 \to T$ an $\F_2$--algebra, the $T$--points of $\Spec \HFtwo P_0(MO)$ will biject with coordinates on $u^* \RP^\infty_{\HFtwo P}$.  The isomorphism of schemes follows, though we have not yet discussed equivarience.
 
-To compute the action of $\InternalAut \G_a$, we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing $\beta(t) = \sum_{j=0}^\infty \beta_j t^j$ and $\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}$, the dual Steenrod coaction on $\HFtwo P_0 BO(1)$ is encoded by the formula \[\sum_{j=0}^\infty \psi(\beta_j) t^j = \psi(\beta(t)) = \beta(\xi(t)) = \sum_{j=0}^\infty \beta_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because $c_*(\beta_j) = \beta'_{j-1}$, this translates to the formula $\psi(\beta'(t)) = \beta'(\xi(t))$, where \[\beta'(t) = \sum_{j=0}^\infty \beta'_j t^{j+1}.\]  Passing from $\HFtwo P_0(MO(1))$ to $\HFtwo P_0(MO) \cong \Sym \HFtwo P_0(MO(1)) / (\beta'_0 = 1)$, this is precisely the formula for precomposing a coordinate with a strict automorphism---i.e., a point in $\Aut_1(\G_a)$ acts on a point in $\Coord(\RP^\infty_{\HFtwo P})$ in the way claimed.
+To compute the action of $\InternalAut \G_a$, we turn to the map in \Cref{RPnThomExample}: \[\Susp^\infty BO(1) \xrightarrow{c, \simeq} \Susp MO(1).\]  Writing $\beta(t) = \sum_{j=0}^\infty \beta_j t^j$ and $\xi(t) = \sum_{k=0}^\infty \xi_k t^{2^k}$, the dual Steenrod coaction on $\HFtwo P_0 BO(1)$ is encoded by the formula \[\sum_{j=0}^\infty \psi(\beta_j) t^j = \psi(\beta(t)) = \beta(\xi(t)) = \sum_{j=0}^\infty \beta_j \left(\sum_{k=0}^\infty \xi_k t^{2^k} \right)^j.\]  Because $c_*(\beta_j) = \beta'_{j-1}$, this translates to the formula $\psi(\beta'(t)) = \beta'(\xi(t))$, where \[\beta'(t) = \sum_{j=0}^\infty \beta'_j t^{j+1}.\]  Passing from $\HFtwo P_0(MO(1))$ to \[\HFtwo P_0(MO) \cong \Sym \HFtwo P_0(MO(1)) / (\beta'_0 = 1),\] we see that this is precisely the formula for precomposing a coordinate with a strict automorphism.  This is exactly the assertion that a point in $\Aut_1(\G_a)$ acts on a point in $\Coord(\RP^\infty_{\HFtwo P})$ in the way claimed.
 \end{proof}
 
 We are now ready to analyze the group cohomology of $\InternalAut(\G_a)$ with coefficients in the comodule $\HFtwo P_0(MO)$.  This is the last piece of input we need to assess the Adams spectral sequence computing $\pi_* MO$.
