--- a/quillen.tex
+++ b/quillen.tex
@@ -60,7 +60,7 @@ Take $S = \Spec R$ to be our base scheme, let $X = \Spec A$ be an affine scheme 
 \end{definition}
 
 \begin{remark}
-In the situation above, there is a natural map $T_x X \to \CatOf{Modules}_R(T^*_x X, R)$.  A map $\sheaf O_X \to R[\eps] / \eps^2$ induces a map $I \to (\eps)$ and hence a map \[I / I^2 \to (\eps) / (\eps^2) \cong R,\] i.e., a point in $T^*_x X$.
+In the situation above, there is a naturally occurring map \[T_x X \to \CatOf{Modules}_R(T^*_x X, R).\]  Namely, a map $\sheaf O_X \to R[\eps] / \eps^2$ induces a map $I \to (\eps)$, and hence induces a further map \[I / I^2 \to (\eps) / (\eps^2) \cong R,\] which can be interpreted as a point in $T^*_x X$.
 \end{remark}
 
 Harkening back to \Cref{FirstAppearanceOfInternalAut}, the definition of the $R$--module tangent space begs promotion to an $S$--scheme.
@@ -74,11 +74,11 @@ We specialize an argument of Strickland~\cite[Proposition 2.94]{StricklandFSFG} 
 & \cong \CatOf{Modules}_R(A \otimes_R (R[\eps] / \eps^2)^*, T) \\
 & \cong \CatOf{Algebras}_{R/}(\Sym_R(A \otimes_R (R[\eps] / \eps^2)^*), T),
 \end{align*}
-we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[\InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
+we see that we can pick out the original mapping set by passing to a quotient of the domain.  After some thought, we arrive at the equation \[\InternalHom{Schemes}_{/S}(\Spec R[\eps] / \eps^2, X) = \Spec \frac{A\{1, da \mid a \in A\}}{\left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right)} .\]  To extract the scheme $T_x X$ from this, we construct the pullback \[T_x X := \InternalHom{Schemes}_S(\Spec R[\eps] / \eps^2, X) \times_X S,\] where the structure maps are given on the left by setting $\eps = 0$ and on the right using the point $x$.  Expanding the formulas again shows that the coordinate ring of this affine scheme is given by \[\sheaf O_{T_x X} = A / I^2 \cong R \oplus T^*_x X. \qedhere\]
 \end{proof}
 
 \begin{definition}
-The ring of functions appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. \xrightarrow{da = 0} A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $d\co A\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
+The ring of functions appearing in the proof above fits into an exact sequence \[0 \to \Omega_{A/R} \to \left. A\{1, da \mid a \in A\} \middle/ \left( \begin{array}{c} \text{$dr = 0$ for $r \in R$}, \\ d(a_1 a_2) = da_1 \cdot a_2 + a_1 \cdot da_2 \end{array} \right) \right. \to A\{1\} \to 0.\]  The kernel $\Omega_{A/R}$ is called the module of \index{Kahler differentials@K\"ahler differentials}\textit{K\"ahler differentials} (of $A$, relative to $R$).  The map $d\co A\to \Omega^1_{A/R}$ is the universal $R$--linear derivation into an $A$--module, i.e., \[\CatOf{Derivations}_R(A, M) = \CatOf{Modules}_A(\Omega^1_{A/R}, M).\]
 \end{definition}
 
 The upshot of this calculation is that $\Spec A/I^2$ is a natural place to study the linear behavior of functions on $X$ near $x$.  We have also set the definitions up so that we can easily generalize to higher-order approximations:
@@ -507,10 +507,10 @@ There are natural isomorphisms $BU_E \cong \Div_0 \CP^\infty_E$ and $(BU \times 
 \cmidrule(r){1-2}
 \cmidrule(r){3-4}
 Object & Classifies & Object & Classifies \\ \midrule
-$BU(n)$ & vector bundles of rank $n$ & $\Div_n^+ \CP^\infty_E$ & effective divisors of rank $n$ \\
+$BU(n)$ & rank $n$ vector bundles & $\Div_n^+ \CP^\infty_E$ & rank $n$ effective divisors \\
 $\coprod_n BU(n)$ & all vector bundles & $\Div^+ \CP^\infty_E$ & all effective divisors \\
 $BU \times \Z$ & stable virtual bundles & $\Div \CP^\infty_E$ & stable Weil divisors \\
-$BU \times \{0\}$ & stable virtual bundles of rank $0$ & $\Div_0 \CP^\infty_E$ & stable divisors of rank $0$ \\ \bottomrule
+$BU \times \{0\}$ & rank $0$ stable virtual bundles & $\Div_0 \CP^\infty_E$ & rank $0$ stable divisors \\ \bottomrule
 \end{tabular}
 \end{center}
 \caption{Different notions of vector bundles and their associated divisors}
@@ -562,7 +562,7 @@ There is an isomorphism
 \[\HFp_* \HFp \cong \F_p[\xi_1, \xi_2, \ldots] \otimes \Lambda[\tau_0, \tau_1, \tau_2, \ldots]\]
 with $|\xi_j| = 2p^j-2$ and $|\tau_j| = 2p^j - 1$. \qed
 \end{theorem}
-\noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--$p$ \index{Steenrod algebra!odd primes}Steenrod algebra means that these classes anti-commute.  This prohibits us both from writing ``$\Spec(\HFp_* \HFp)$'' and from trusting ``$\Spec(\HFp P_0 \HFp)$'' to do a good enough job.  This is the first time we have encountered Hindrance \#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
+\noindent There are odd--dimensional classes in this algebra, and the \emph{graded-commutativity} of the dual mod--$p$ \index{Steenrod algebra!odd primes}Steenrod algebra means that these classes anti-commute.  This prohibits us both from even writing ``$\Spec(\HFp_* \HFp)$'', and this is the first time we have encountered Hindrance~\#\ref{SkewCommutativeDeficiency} from \Cref{TheSteenrodAlgebraSection} in the wild.
 
 Because of this, we will not feel any guilt for taking a completely alternative approach to this calculation.  This other method, due to Quillen, has as its keystone a completely different kind of cohomology operation called a \index{power operation}\textit{power operation}.  These operations are quite technical to describe, but at their core is taking the $n${\th} power of a cohomology class---and hence they have a frustrating lack of properties, including failures to be additive and to be stable.  Our goal in this Lecture is just to define these cohomology operations, specialized to the particular setting we will need for Quillen's proof.  Unlike with Steenrod squares, their algebro-geometric interpretation will not be immediately accessible to us, and indeed their eventual reinterpretation in these terms are one of the more hard-won pursuits in this area of mathematics (cf.\ \Cref{PowerOpnsSection}).
 
